# EntraCopilotAgent365

./: .gitignore  DEMO_PROMPTS.md  DEMO_PROMPTS_INDEX.md  DEMO_PROMPTS_README.md  DEMO_PROMPTS_SUMMARY.txt  DEMO_PROMPTS_TECHNICAL.md  DEMO_QUICK_REFERENCE.md  QUICK_START.md  README.md  STORAGE_SOLUTION.md  admin.html  azuredeploy.json  demo_workflow.py  function_app.py  index copy 2.html  index copy 3.html  index copy 4.html  index copy.html  index.html  local.settings.template.json  requirements-dev.txt  requirements.txt  run.sh  run_pre_deployment_tests.py  setup.sh  test_local_storage.py
.claude/agents/: 365-vigilant-spark.md
.claude/commands/: copilot365.md  debug.md  deploy.md  new-agent.md
agents/: context_analyzer_agent.py  github_agent_library_manager.py  iq_booster_agent.py  learn_new_agent.py  scripted_demo_agent.py  workflow_runner_agent.py
docs/: LOCAL_DEVELOPMENT.md  deploy.html
tauri-client/: .gitignore  README.md  build-frontend.sh  generate-icons.sh  package.json
tauri-client/src-tauri/: Cargo.toml  tauri.conf.json
tauri-client/src-tauri/capabilities/: default.json
tauri-client/src-tauri/icons/: icon.icns
tauri-client/src-tauri/src/: main.rs
tests/: __init__.py  test_deployment_readiness.py  test_function_app.py
utils/: azure_file_storage.py  environment.py  local_file_storage.py  storage_factory.py
workflows/: iq_boost_workflow.json
